FakePCIID.kext returned to /L/E/ folder
I noticed random reboots without this kext.

--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -156,6 +156,8 @@
 				<key>PluginType</key>
 				<true/>
 			</dict>
+			<key>UseSystemIO</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>Boot</key>
