--- a/EFI/CLOVER/themes/Lightness256/theme.plist
+++ b/EFI/CLOVER/themes/Lightness256/theme.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Badruzeus</string>
 	<key>Description</key>
-	<string>Lightness Clover theme with 256px icons size. Version: 1.1</string>
+	<string>Lightness Clover theme with 256px icons size. Version: 1.3</string>
 	<key>Theme</key>
 	<dict>
 		<key>Background</key>
@@ -39,7 +39,7 @@
 			<key>Functions</key>
 			<true/>
 			<key>Help</key>
-			<true/>
+			<false/>
 			<key>Label</key>
 			<true/>
 			<key>MenuTitle</key>
@@ -47,7 +47,7 @@
 			<key>MenuTitleImage</key>
 			<true/>
 			<key>Revision</key>
-			<true/>
+			<false/>
 		</dict>
 		<key>Font</key>
 		<dict>
@@ -101,7 +101,7 @@
 		</dict>
 	</dict>
 	<key>Version</key>
-	<string>1.1</string>
+	<string>1.3</string>
 	<key>Year</key>
 	<string>2018</string>
 </dict>
