Added HighCurrent flag for USB
config.plist ▸ Devices ▸ USB ▸ HighCurrent=1

This allow to charge iPad and other power hungry devices without system warnings.

--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -167,7 +167,7 @@
 		<key>DefaultLoader</key>
 		<string>boot.efi</string>
 		<key>DefaultVolume</key>
-		<string>7F41DB2A-3678-4F1A-99CF-3111C26C6D08</string>
+		<string>2ADB417F78361A4F99CF3111C26C6D08</string>
 		<key>Legacy</key>
 		<string>PBR</string>
 		<key>Secure</key>
@@ -175,7 +175,7 @@
 		<key>Timeout</key>
 		<integer>3</integer>
 		<key>XMPDetection</key>
-		<string>Yes</string>
+		<integer>2</integer>
 	</dict>
 	<key>CPU</key>
 	<dict>
@@ -205,7 +205,7 @@
 			<key>FixOwnership</key>
 			<true/>
 			<key>HighCurrent</key>
-			<false/>
+			<true/>
 			<key>Inject</key>
 			<true/>
 		</dict>
@@ -371,11 +371,13 @@
 			<true/>
 			<key>Legacy</key>
 			<false/>
+			<key>Linux</key>
+			<false/>
 			<key>Tool</key>
 			<false/>
 		</dict>
 		<key>ScreenResolution</key>
-		<string>1920x1080</string>
+		<string>2560x1600</string>
 		<key>Theme</key>
 		<string>Lightness256</string>
 	</dict>
@@ -415,7 +417,7 @@
 		<key>BooterConfig</key>
 		<string>0x28</string>
 		<key>CsrActiveConfig</key>
-		<string>0x67</string>
+		<string>0x01</string>
 		<key>MLB</key>
 		<string>C02032109R5DC771H</string>
 		<key>ROM</key>
