--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -175,7 +175,7 @@
 		<key>Timeout</key>
 		<integer>3</integer>
 		<key>XMPDetection</key>
-		<integer>2</integer>
+		<string>Yes</string>
 	</dict>
 	<key>CPU</key>
 	<dict>
