--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -222,17 +222,17 @@
 					<key>Disabled</key>
 					<false/>
 					<key>FullTitle</key>
-					<string>Preboot macOS Mojave</string>
+					<string>macOS Mojave</string>
 					<key>Hidden</key>
 					<false/>
 					<key>Ignore</key>
 					<false/>
 					<key>InjectKexts</key>
-					<string>Detect</string>
+					<true/>
 					<key>NoCaches</key>
 					<false/>
 					<key>Path</key>
-					<string>\46C191CB-6DE3-48C0-A9DF-41BB6A9FF83B\System\Library\CoreServices\boot.efi</string>
+					<string>\0323E6B5-9C71-4D22-A2BE-3E0C9F343992\System\Library\CoreServices\boot.efi</string>
 					<key>Type</key>
 					<string>OSX</string>
 					<key>Volume</key>
@@ -244,65 +244,21 @@
 					<key>Disabled</key>
 					<false/>
 					<key>FullTitle</key>
-					<string>Recovery macOS Mojave</string>
+					<string>Hack Backup</string>
 					<key>Hidden</key>
+					<false/>
+					<key>Ignore</key>
+					<false/>
+					<key>InjectKexts</key>
 					<true/>
-					<key>Ignore</key>
-					<false/>
-					<key>InjectKexts</key>
-					<string>Detect</string>
 					<key>NoCaches</key>
 					<false/>
 					<key>Path</key>
-					<string>\46C191CB-6DE3-48C0-A9DF-41BB6A9FF83B\boot.efi</string>
-					<key>Type</key>
-					<string>OSXRecovery</string>
-					<key>Volume</key>
-					<string>Recovery</string>
-					<key>VolumeType</key>
-					<string>Internal</string>
-				</dict>
-				<dict>
-					<key>Disabled</key>
-					<false/>
-					<key>FullTitle</key>
-					<string>Recovery Hack Backup</string>
-					<key>Hidden</key>
-					<true/>
-					<key>Ignore</key>
-					<false/>
-					<key>InjectKexts</key>
-					<string>Detect</string>
-					<key>NoCaches</key>
-					<false/>
-					<key>Path</key>
-					<string>\EDF74981-6A31-48B2-8708-746ECD3D6005\boot.efi</string>
-					<key>Type</key>
-					<string>OSXRecovery</string>
-					<key>Volume</key>
-					<string>1087B4DF9F637E478A5A7BD90F7C0A53</string>
-					<key>VolumeType</key>
-					<string>Internal</string>
-				</dict>
-				<dict>
-					<key>Disabled</key>
-					<false/>
-					<key>FullTitle</key>
-					<string>Preboot Hack Backup</string>
-					<key>Hidden</key>
-					<false/>
-					<key>Ignore</key>
-					<false/>
-					<key>InjectKexts</key>
-					<string>Detect</string>
-					<key>NoCaches</key>
-					<false/>
-					<key>Path</key>
-					<string>\EDF74981-6A31-48B2-8708-746ECD3D6005\System\Library\CoreServices\boot.efi</string>
+					<string>\BD5BB8CD-15A2-4BDD-A7D8-40FF79962A70\System\Library\CoreServices\boot.efi</string>
 					<key>Type</key>
 					<string>OSX</string>
 					<key>Volume</key>
-					<string>C86915F061976E47A508D18C5D6CF8D8</string>
+					<string>2BF66522D3C1B74A95EEC582AAC7C1CC</string>
 					<key>VolumeType</key>
 					<string>Internal</string>
 				</dict>
@@ -310,48 +266,52 @@
 					<key>Disabled</key>
 					<false/>
 					<key>FullTitle</key>
-					<string>Install Prebooter Macintosh SSD</string>
+					<string>Hack Backup Install Prebooter</string>
 					<key>Hidden</key>
 					<true/>
 					<key>Ignore</key>
 					<false/>
 					<key>InjectKexts</key>
-					<string>Detect</string>
+					<true/>
 					<key>NoCaches</key>
 					<false/>
 					<key>Path</key>
-					<string>\46C191CB-6DE3-48C0-A9DF-41BB6A9FF83B\com.apple.installer\boot.efi</string>
+					<string>\BD5BB8CD-15A2-4BDD-A7D8-40FF79962A70\com.apple.installer\boot.efi</string>
+					<key>Type</key>
+					<string>OSXInstaller</string>
+					<key>Volume</key>
+					<string>2BF66522D3C1B74A95EEC582AAC7C1CC</string>
+					<key>VolumeType</key>
+					<string>Internal</string>
+				</dict>
+				<dict>
+					<key>Disabled</key>
+					<false/>
+					<key>FullTitle</key>
+					<string>macOS Mojave Install Prebooter</string>
+					<key>Hidden</key>
+					<true/>
+					<key>Ignore</key>
+					<false/>
+					<key>InjectKexts</key>
+					<true/>
+					<key>NoCaches</key>
+					<false/>
+					<key>Path</key>
+					<string>\0323E6B5-9C71-4D22-A2BE-3E0C9F343992\com.apple.installer\boot.efi</string>
 					<key>Type</key>
 					<string>OSXInstaller</string>
 					<key>Volume</key>
 					<string>2ADB417F78361A4F99CF3111C26C6D08</string>
-					<key>VolumeType</key>
-					<string>Internal</string>
-				</dict>
-				<dict>
-					<key>Disabled</key>
-					<false/>
-					<key>FullTitle</key>
-					<string>Install Prebooter Hack Backup</string>
-					<key>Hidden</key>
-					<true/>
-					<key>Ignore</key>
-					<false/>
-					<key>InjectKexts</key>
-					<string>Detect</string>
-					<key>NoCaches</key>
-					<false/>
-					<key>Path</key>
-					<string>\EDF74981-6A31-48B2-8708-746ECD3D6005\com.apple.installer\boot.efi</string>
-					<key>Type</key>
-					<string>OSXInstaller</string>
-					<key>Volume</key>
-					<string>C86915F061976E47A508D18C5D6CF8D8</string>
 					<key>VolumeType</key>
 					<string>Internal</string>
 				</dict>
 			</array>
 		</dict>
+		<key>Hide</key>
+		<array>
+			<string>Recovery</string>
+		</array>
 		<key>Language</key>
 		<string>en:0</string>
 		<key>Mouse</key>
