Kaby Lake FakeID changed to Coffee Lake FakeID
config.plist ▸ Devices ▸ IntelGFX = 0x3E918086
config.plist ▸ Graphics ▸ ig-platfrom-id = 0x3E9B0007 (you can also try 0x3E920003)

--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -194,7 +194,7 @@
 		<key>FakeID</key>
 		<dict>
 			<key>IntelGFX</key>
-			<string>0x59128086</string>
+			<string>0x3E918086</string>
 		</dict>
 		<key>LANInjection</key>
 		<false/>
@@ -354,6 +354,8 @@
 		</dict>
 		<key>NvidiaSingle</key>
 		<false/>
+		<key>ig-platform-id</key>
+		<string>0x3E9B0007</string>
 	</dict>
 	<key>KernelAndKextPatches</key>
 	<dict>
