Kext’s updated. iGPU only is no longer supported
1. From now my config will support only z370n with external GPUs. I disabled all patches that are used for iGPU.
2. I disabled Audio patches. Z370n works fine without them.
3. config.plist ▸ Devices ▸ IntelFGX = 0×3E928086 (value for i5/i7 CPUs, before it was 0×3E918086 for i3)
4. config.plist ▸ Graphics ▸ ig-platform-id = 0x3E920003 (actual for external GPUs)
5. config.plist made from stretch.

Lilu ▸ 1.3.1
WhateverGreen ▸ 1.2.6

--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -354,6 +354,8 @@
 		</dict>
 		<key>NvidiaSingle</key>
 		<false/>
+		<key>ig-platform-id</key>
+		<string>0x3E920003</string>
 	</dict>
 	<key>KernelAndKextPatches</key>
 	<dict>
