--- a/EFI/CLOVER/kexts/Other/CodecCommander.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/CodecCommander.kext/Contents/Info.plist
@@ -91,7 +91,32 @@
 					<key>Check Interval</key>
 					<integer>3000</integer>
 					<key>Custom Commands</key>
-					<array/>
+					<array>
+						<dict>
+							<key>Command</key>
+							<data>AhcIgw==</data>
+							<key>Comment</key>
+							<string>0x21 SET_UNSOLICITED_ENABLE 0x83</string>
+							<key>On Init</key>
+							<true/>
+							<key>On Sleep</key>
+							<false/>
+							<key>On Wake</key>
+							<true/>
+						</dict>
+						<dict>
+							<key>Command</key>
+							<data>AZcHJQ==</data>
+							<key>Comment</key>
+							<string>0x19 SET_PIN_WIDGET_CONTROL 0x25</string>
+							<key>On Init</key>
+							<true/>
+							<key>On Sleep</key>
+							<false/>
+							<key>On Wake</key>
+							<true/>
+						</dict>
+					</array>
 					<key>Perform Reset on EAPD Fail</key>
 					<false/>
 					<key>Send Delay</key>
@@ -118,9 +143,7 @@
 					<array>
 						<dict>
 							<key>Command</key>
-							<data>
-							AgUABw==
-							</data>
+							<data>AgUABw==</data>
 							<key>Comment</key>
 							<string>0x20 SET_COEF_INDEX 0x07</string>
 							<key>On Init</key>
@@ -132,9 +155,7 @@
 						</dict>
 						<dict>
 							<key>Command</key>
-							<data>
-							AgR8sA==
-							</data>
+							<data>AgR8sA==</data>
 							<key>Comment</key>
 							<string>0x20 SET_PROC_COEF 0x7CB0</string>
 							<key>On Init</key>
@@ -158,9 +179,7 @@
 					<array>
 						<dict>
 							<key>Command</key>
-							<data>
-							AVcIgw==
-							</data>
+							<data>AVcIgw==</data>
 							<key>Comment</key>
 							<string>0x15 SET_UNSOLICITED_ENABLE 0x83</string>
 							<key>On Init</key>
@@ -178,9 +197,7 @@
 					<array>
 						<dict>
 							<key>Command</key>
-							<data>
-							AVcIgw==
-							</data>
+							<data>AVcIgw==</data>
 							<key>Comment</key>
 							<string>0x15 SET_UNSOLICITED_ENABLE 0x83</string>
 							<key>On Init</key>
@@ -198,9 +215,7 @@
 					<array>
 						<dict>
 							<key>Command</key>
-							<data>
-							AhcIgw==
-							</data>
+							<data>AhcIgw==</data>
 							<key>Comment</key>
 							<string>0x21 SET_UNSOLICITED_ENABLE 0x83</string>
 							<key>On Init</key>
@@ -222,9 +237,7 @@
 					<array>
 						<dict>
 							<key>Command</key>
-							<data>
-							AZcHJQ==
-							</data>
+							<data>AZcHJQ==</data>
 							<key>Comment</key>
 							<string>0x19 SET_PIN_WIDGET_CONTROL 0x25</string>
 							<key>On Init</key>
@@ -236,9 +249,7 @@
 						</dict>
 						<dict>
 							<key>Command</key>
-							<data>
-							AhcIgw==
-							</data>
+							<data>AhcIgw==</data>
 							<key>Comment</key>
 							<string>0x21 SET_UNSOLICITED_ENABLE 0x83</string>
 							<key>On Init</key>
@@ -274,9 +285,7 @@
 						</dict>
 						<dict>
 							<key>Command</key>
-							<data>
-							AVcIgw==
-							</data>
+							<data>AVcIgw==</data>
 							<key>Comment</key>
 							<string>0x15 SET_UNSOLICITED_ENABLE 0x83</string>
 							<key>On Init</key>
@@ -296,9 +305,7 @@
 					<array>
 						<dict>
 							<key>Command</key>
-							<data>
-							AVcIgw==
-							</data>
+							<data>AVcIgw==</data>
 							<key>Comment</key>
 							<string>0x15 SET_UNSOLICITED_ENABLE 0x83</string>
 							<key>On Init</key>
@@ -310,9 +317,7 @@
 						</dict>
 						<dict>
 							<key>Command</key>
-							<data>
-							AbcHIA==
-							</data>
+							<data>AbcHIA==</data>
 							<key>Comment</key>
 							<string>Node 0x1b - Pin Control (In Enable)</string>
 							<key>On Init</key>
